# truelayer-pokemon-challenge

./: Cargo.toml  Dockerfile  Dockerfile.test  Readme.md
src/: main.rs  metrics.rs  routes.rs
src/clients/: mod.rs  pokemon.rs  shakespeare.rs
src/routes/: errors.rs  mod.rs  pokemons.rs
