[package]
name = "truelayer-pokemon-challenge"
version = "0.1.0"
authors = ["Marco Cameriero <me@marcocameriero.net>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
signal-hook = "0.3.8"
signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
futures = "0.3.15"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
