[package]
name = "truelayer-pokemon-challenge"
version = "0.1.0"
authors = ["Marco Cameriero <me@marcocameriero.net>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
signal-hook = "0.3.8"
signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
futures = "0.3.15"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
reqwest = { version = "0.11.3", features = ["json"] }
anyhow = "1.0.40"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
httpmock = "0.5.8"
form_urlencoded = "1.0.1"
lru = "0.6.5"
regex = "1.5.4"
prometheus = "0.12.0"
lazy_static = "1.4.0"
